--- a/vignettes/causaltrees_intro.Rmd
+++ b/vignettes/causaltrees_intro.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 ```{r setup}
 library(causaltrees)
 library(phytools)
+library(ape)
 ```
 
 First we will show that `causaltrees` works as well as a standard Brownian motion based method that uses the whole phylogeny under the best case scenario for Brownian motion, when the data is simulated under a standard Brownian motion process! We simulate one trait (our response) under Brownian motion, and a second (our predictor) just randomly according to a standard Gaussian. Because our response values will not be independent, a standard regression model's assumptions are violated. We can account for this non-independence by modelling our residuals as a multivariate gaussian with a phylogenetic covariance matrix, or we can condition on a random effect reflecting the phylogeny. Traditionally we use a random effect with a phylogenetic covariance matrix as it's hyper distribution, but we show with `causaltrees` that we don't need to condition on the whole phylogeny. First we simulate our data:
@@ -28,6 +29,30 @@ pred <- fastBM(tree)
 #pred <- rnorm(100, sd(resp))
 plot(resp ~ pred)
 summary(lm(resp ~ pred))
+
+run_covar <- function(tree) {
+  resp <- fastBM(tree)
+  pred <- fastBM(tree)
+  #cor.test(resp, pred)$p.value
+  cov(resp, pred)
+}
+run_covar(tree)
+cvs <- replicate(10000, run_covar(tree))
+sum(cvs < 0.05) / length(cvs)
+mean(abs(cvs))
+hist(cvs, breaks = 100)
+
+run_covar2 <- function(tree) {
+  resp <- fastBM(tree)
+  pred <- rnorm(Ntip(tree), sd(resp))
+  #cor.test(resp, pred)$p.value
+  cov(resp, pred)
+}
+run_covar2(tree)
+cvs2 <- replicate(10000, run_covar2(tree))
+sum(cvs2 < 0.05) / length(cvs2)
+hist(cvs2, breaks = 100)
+mean(abs(cvs2))
 ```
 
 We will use 
